--- a/Group_Project_Try1/res/layout/activity_chat.xml
+++ b/Group_Project_Try1/res/layout/activity_chat.xml
@@ -8,6 +8,7 @@
         android:id="@+id/text_box"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/edit_message"
         android:text="@string/chat_text" />
